--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Giới thiệu</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
 
@@ -37,4 +37,5 @@
   </main>
 
 </body>
+
 </html>
