--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thư viện ảnh</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
 
@@ -34,4 +34,5 @@
 </main>
 
 </body>
+
 </html>
