--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
   <!-- Navigation -->
   <nav>
     <ul>
-      <li><a href="index1.html">Trang chủ</a></li>
+      <li><a href="index.html">Trang chủ</a></li>
       <li><a href="about.html">Giới thiệu</a></li>
       <li><a href="gallery.html">Thư viện</a></li>
     </ul>
@@ -36,3 +36,4 @@
 </body>
 
 </html>
+
