--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thư viện ảnh</title>
-  <link rel="stylesheet" href="css/style1.css">
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
 
@@ -13,9 +13,9 @@
   <!-- Navigation -->
   <nav>
     <ul>
-      <li><a href="index.html">Trang chủ</a></li>
-      <li><a href="about.html">Giới thiệu</a></li>
-      <li><a href="gallery.html">Thư viện</a></li>
+      <li><a href="./index.html">Trang chủ</a></li>
+      <li><a href="./about.html">Giới thiệu</a></li>
+      <li><a href="./gallery.html">Thư viện</a></li>
     </ul>
   </nav>
 
@@ -36,4 +36,5 @@
 </body>
 
 </html>
+
 
